[gd_scene load_steps=12 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Spatial.tscn" type="PackedScene" id=2]
[ext_resource path="res://pixil-frame-0 (3).png" type="Texture" id=3]
[ext_resource path="res://Panel2D.gd" type="Script" id=4]
[ext_resource path="res://pngfind.com-cartoon-sun-png-177854.png" type="Texture" id=5]
[ext_resource path="res://PathFollow2D.gd" type="Script" id=6]
[ext_resource path="res://Panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Button.gd" type="Script" id=8]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 76.9542, 78.2661, 0, 0, 0, 0, 258.526, 27.5329, 0, 0, 0, 0, 385.358, 62.2451, 0, 0, 0, 0, 605.647, 34.2083, 0, 0, 0, 0, 811.25, 74.2608, 0, 0, 0, 0, 919.392, 39.5486, 0, 0, 0, 0, 990.151, 122.324, 0, 0, 0, 0, 944.758, 209.104, 0, 0, 0, 0, 855.308, 155.701, 0, 0, 0, 0, 817.925, 209.104, 0, 0, 0, 0, 744.496, 154.366, 0, 0, 0, 0, 649.705, 239.811, 0, 0, 0, 0, 660.386, 120.989, 0, 0, 0, 0, 500.176, 116.983, 0, 0, 0, 0, 457.453, 271.853, 0, 0, 0, 0, 341.301, 122.324, 0, 0, 0, 0, 428.081, 119.654, 0, 0, 0, 0, 279.887, 90.2818, 0, 0, 0, 0, 194.442, 177.062, 0, 0, 0, 0, 351.981, 245.151, 0, 0, 0, 0, 165.07, 255.832, 0, 0, 0, 0, 98.3156, 158.371, 0, 0, 0, 0, 159.729, 119.654, 0, 0, 0, 0, 75.6191, 78.2661 )
}

[sub_resource type="CircleShape2D" id=3]
radius = 19.7531

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Sprite" parent="."]
position = Vector2( 506.104, 555.458 )
scale = Vector2( 0.799064, 0.272803 )
texture = ExtResource( 3 )
script = ExtResource( 8 )

[node name="Panel2D" type="Sprite" parent="."]
position = Vector2( 506.433, 423.365 )
rotation = 3.14159
scale = Vector2( 0.325632, 0.325632 )
texture = SubResource( 1 )
script = ExtResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="Panel2D"]
position = Vector2( 8.05298, 33.9227 )
scale = Vector2( 3.07095, 3.07095 )
enabled = true
cast_to = Vector2( 0, 430 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 500, 500 )

[node name="Spatial2" parent="Viewport" instance=ExtResource( 7 )]

[node name="Spatial" parent="Viewport" instance=ExtResource( 2 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 509.979, 297.227 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 76.9542, 78.2661 )
rotation = -0.272465
rotate = false
script = ExtResource( 6 )

[node name="StaticBody2D" type="StaticBody2D" parent="Path2D/PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/StaticBody2D"]
position = Vector2( 2.74622, -0.297867 )
shape = SubResource( 3 )

[node name="soleil" type="Sprite" parent="Path2D/PathFollow2D/StaticBody2D"]
position = Vector2( 2.44409, -0.568848 )
rotation = 0.272465
scale = Vector2( 0.0413894, 0.0413894 )
texture = ExtResource( 5 )
