[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/button.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71.8919, 37.9611 )

[node name="KinematicBody2D" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="mouse_exited" from="." to="." method="_on_KinematicBody2D_mouse_exited"]
